mini-ecommerce/deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mini-ecommerce-service

spec:
  selector:
    app: mini-ecommerce

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: NodePort
